--- a/style.css
+++ b/style.css
@@ -16,25 +16,24 @@ body {
   height: 300px;
   border: 2px dashed blue;
   display: flex;
+  margin-bottom: 30pt;
+  position: relative;
+}
+
+#editor{
+  height: 200px;
+  /* width: 200px; */
 }
 
 .container{
-  /* width: 400px; */
-  /* width: 1300px; */
-  /* height: 550px; */
+
 }
 
 .container span{
-  height: 1em;
-  display: inline-block;
+  /* height: 1em; */
+  /* display: inline-block; */
   /* margin-top: 10pt; */
-  background-color: #e9e9e9;
-}
-
-.container span:nth-child(9){
-  /* font-size: 120%;
-  font-style: italic;
-  margin-top: 20pt; */
+  /* background-color: #e9e9e9; */
 }
 
 .container p{
