--- a/style.css
+++ b/style.css
@@ -43,6 +43,13 @@ body {
   margin: 0;
 }
 
+.container font{
+  /* font-size: 20px; */
+  /* font-size: 60pt; */
+  line-height: 1;
+  margin: 0;
+}
+
 .container p span{
   /* display: block; */
 }
