--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 .container{
-
+  width: 100%;
 }
 
 .container span{
@@ -46,6 +46,10 @@ body {
 .container font{
   /* font-size: 20px; */
   /* font-size: 60pt; */
+  -webkit-margin-before: 1em;
+  -webkit-margin-after: 1em;
+  -webkit-margin-start: 0px;
+  -webkit-margin-end: 0px;
   line-height: 1;
   margin: 0;
 }
